add_definitions(
    -DALLOW_MSVC6_WITHOUT_PSDK
    -DBUILDING_LIBCURL
    -DHAVE_CONFIG_H
)

if (CMAKE_BUILD_TYPE STREQUAL Debug)
    add_definitions(
        -DCURLDEBUG
        -DDEBUGBUILD
    )
endif()

include_directories(
    .
)

add_library(curl STATIC
    altsvc.c
    amigaos.c
    asyn-ares.c
    asyn-thread.c
    base64.c
    bufref.c
    cfilters.c
    c-hyper.c
    conncache.c
    connect.c
    content_encoding.c
    cookie.c
    curl_addrinfo.c
    curl_des.c
    curl_endian.c
    curl_fnmatch.c
    curl_get_line.c
    curl_gethostname.c
    curl_gssapi.c
    curl_memrchr.c
    curl_multibyte.c
    curl_ntlm_core.c
    curl_ntlm_wb.c
    curl_path.c
    curl_range.c
    curl_rtmp.c
    curl_sasl.c
    curl_sspi.c
    curl_threads.c
    dict.c
    doh.c
    dynbuf.c
    easy.c
    easygetopt.c
    easyoptions.c
    escape.c
    file.c
    fileinfo.c
    fopen.c
    formdata.c
    ftp.c
    ftplistparser.c
    getenv.c
    getinfo.c
    gopher.c
    h2h3.c
    hash.c
    headers.c
    hmac.c
    hostasyn.c
    hostip.c
    hostip4.c
    hostip6.c
    hostsyn.c
    hsts.c
    http.c
    http_aws_sigv4.c
    http_chunks.c
    http_digest.c
    http_negotiate.c
    http_ntlm.c
    http_proxy.c
    http2.c
    idn.c
    if2ip.c
    imap.c
    inet_ntop.c
    inet_pton.c
    krb5.c
    ldap.c
    llist.c
    md4.c
    md5.c
    memdebug.c
    mime.c
    mprintf.c
    mqtt.c
    multi.c
    netrc.c
    nonblock.c
    noproxy.c
    openldap.c
    parsedate.c
    pingpong.c
    pop3.c
    progress.c
    psl.c
    rand.c
    rename.c
    rtsp.c
    select.c
    sendf.c
    setopt.c
    sha256.c
    share.c
    slist.c
    smb.c
    smtp.c
    socketpair.c
    socks.c
    socks_gssapi.c
    socks_sspi.c
    speedcheck.c
    splay.c
    strcase.c
    strdup.c
    strerror.c
    strtok.c
    strtoofft.c
    system_win32.c
    telnet.c
    tftp.c
    timediff.c
    timeval.c
    transfer.c
    url.c
    urlapi.c
    version.c
    version_win32.c
    warnless.c
    wildcard.c
    ws.c
    vtls/bearssl.c
    vtls/gskit.c
    vtls/gtls.c
    vtls/hostcheck.c
    vtls/keylog.c
    vtls/mbedtls.c
    vtls/mbedtls_threadlock.c
    vtls/nss.c
    vtls/openssl.c
    vtls/rustls.c
    vtls/schannel.c
    vtls/schannel_verify.c
    vtls/sectransp.c
    vtls/vtls.c
    vtls/wolfssl.c
    vtls/x509asn1.c
    vssh/libssh.c
    vssh/libssh2.c
    vssh/wolfssh.c
    vquic/msh3.c
    vquic/ngtcp2.c
    vquic/quiche.c
    vquic/vquic.c
    vauth/cleartext.c
    vauth/cram.c
    vauth/digest.c
    vauth/digest_sspi.c
    vauth/gsasl.c
    vauth/krb5_gssapi.c
    vauth/krb5_sspi.c
    vauth/ntlm.c
    vauth/ntlm_sspi.c
    vauth/oauth2.c
    vauth/spnego_gssapi.c
    vauth/spnego_sspi.c
    vauth/vauth.c

)
